# litesquad

./: README.md  pyproject.toml
src/litesquad/: check_keys.py  cli.py  config.py  llm.py  models.py  paths.py  prompts.py  squad.py
src/litesquad/web/: __init__.py  app.py  runner.py  views.py
tests/: test_cli.py  test_config.py  test_llm.py  test_models.py  test_squad.py  test_web_app.py  test_web_runner.py  test_web_views.py
