[project]
name = "litesquad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "EricThomson", email = "thomson.eric@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.90.1",
    "platformdirs>=4.10.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
litesquad = "litesquad:main"
litesquad-keys = "litesquad.check_keys:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
