[project]
name = "litesquad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "EricThomson", email = "thomson.eric@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.90.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.0",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.optional-dependencies]
web = [
    # <4.2: Dash 4.2+ remounts every child whenever a callback writes a children
    # prop (open regression, plotly/dash#3846), which wipes DOM state like
    # <details> open/closed in the live view. Lift the cap when that issue closes.
    "dash>=3.0,<4.2",
]

[project.scripts]
litesquad = "litesquad:main"
litesquad-keys = "litesquad.check_keys:main"

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
